--- a/django_project/first_app/templates/base.html
+++ b/django_project/first_app/templates/base.html
@@ -9,30 +9,27 @@
             Title Main Page
         {% endblock %}
     </title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="{% static 'css/app_styles.css' %}">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
 {% block group-info %}
-    <h2> Python Courses Group #{{ group_id }}</h2>
-    <p><strong>Teacher</strong>: {{ teacher }}</p>
 {% endblock %}
 {% block content %}
-    <table>
-        <tr>
-            <th> ID</th>
-            <th>Name</th>
-            <th>Points</th>
-        </tr>
-        {% for student in students %}
-            <tr>
-                <td>{{ student.id }} </td>
-                <td>{{ student.name }}</td>
-                <td>{{ student.points }}</td>
-            </tr>
-        {% endfor %}
-    </table>
-{% endblock content %}
 
+{% endblock content %}
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
