--- a/django_project/first_app/static/css/styles.css
+++ b/django_project/first_app/static/css/styles.css
@@ -1,5 +1,21 @@
-.table-min-width > th,
-    .table-min-width > td {
-      max-width: 100px; /* Adjust this value as needed */
-      white-space: nowrap;
-    }
+.journal-col {
+    border: black 2px solid;
+}
+
+#journal-container {
+    height: 100%;
+    overflow-y: scroll
+}
+
+.container {
+    overflow-x: auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.col {
+    flex: 0 0 100px;
+}
