--- a/django_project/first_app/templates/journal.html
+++ b/django_project/first_app/templates/journal.html
@@ -6,44 +6,53 @@
 {% endblock %}
 
 {% block content %}
-    <table class="table table-bordered table-min-width">
-        <thead>
-        <tr>
-            <th> Student</th>
-            {% for lesson in lessons %}
-                <th class="min-width">{{ lesson.title }}</th>
-            {% endfor %}
-        </tr>
-        </thead>
-        <tbody>
-        {% for student, lesson_info in journal.items %}
-            <tr>
-                <td>
-                    <a href="{% url 'student-info' pk=student.pk %}">{{ student.email }}</a>
-                </td>
-                {% for lesson in lesson_info %}
-
-                    <td>
-                        <div class="journal-student-cell d-flex flex-row justify-content-around w-20 ">
-                            <div class="d-flex">
-                                {% if lesson.visited %}
-                                    <i class="bi bi-check"></i>
-                                {% else %}
-                                    <i class="bi bi-x-square"></i>
-                                {% endif %}
-                            </div>
-                            <div class="d-flex flex-column">
-                                <span><strong>Comment: </strong> {{ lesson.comment|truncatechars:10 }}</span>
-                                <span><strong>Points:</strong> {{ lesson.points }}</span>
-                            </div>
-                        </div>
-
-                    </td>
+    <div class="w-75">
+        <div id="journal-container" class="container ">
+            <div class="row">
+                <div class="col-2  journal-col"> Student</div>
+                {% for lesson in lessons %}
+                    <div class="col-2 journal-col min-width">{{ lesson.title }}</div>
                 {% endfor %}
+            </div>
+            {% for student, lesson_info in journal.items %}
+                <div class="row">
+                    <div class="col-2 journal-col">
+                        <a href="{% url 'student-info' pk=student.pk %}">{{ student.email }}</a>
+                    </div>
 
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                    {% for lesson_relation in lesson_info %}
+                        <div class="col-2 journal-col">
+                            <div class="journal-student-cell d-flex flex-row justify-content-around w-20 align-items-center">
+                                <div class="d-flex mx-auto align-items-center">
+                                    {% if lesson_relation.visited %}
+                                        <a href="{%  url 'switch-visited' student_pk=student.pk lesson_pk=lesson_relation.lesson.pk %}"><i class="mx-auto  bi bi-check btn btn-info"></i></a>
+                                    {% else %}
+                                        <a href="{%  url 'switch-visited' student_pk=student.pk lesson_pk=lesson_relation.lesson.pk %}"><i class="mx-auto  bi bi-x-square btn btn-info"></i></a>
+                                    {% endif %}
+                                </div>
+                                <div class="d-flex flex-column pl-2">
+                                    <span><strong>Comment: </strong> {{ lesson_relation.comment|truncatechars:10 }}</span>
+                                    <span><strong>Points:</strong> {{ lesson_relation.points }}</span>
+                                </div>
+                            </div>
 
+                        </div>
+                    {% endfor %}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+{% endblock %}
+
+{% block scripts %}
+    <script>
+        $(document).ready(function () {
+            $('#journal-container').DataTable({
+                "scrollX": true,
+                "scrollY": 200,
+            });
+            $('.dataTables_length').addClass('bs-select');
+        });
+    </script>
 {% endblock %}
