--- a/django_project/first_app/templates/journal.html
+++ b/django_project/first_app/templates/journal.html
@@ -33,7 +33,7 @@
                                                         class="mx-auto  bi bi-check btn btn-info"></i></a>
                                             {% else %}
                                                 <a href="{% url 'switch-visited' student_pk=student.pk lesson_pk=lesson.pk %}"><i
-                                                        class="mx-auto  bi bi-x-square btn btn-info"></i></a>
+                                                        class="mx-auto  bi bi-x-square btn btn-danger"></i></a>
                                             {% endif %}
                                         </div>
                                         <div class="d-flex flex-column pl-2">
