--- a/django_project/first_app/static/css/styles.css
+++ b/django_project/first_app/static/css/styles.css
@@ -19,3 +19,14 @@
 .col {
     flex: 0 0 100px;
 }
+
+.light-title {
+    width: fit-content;
+}
+
+#lesson-detail-side {
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+}
