--- a/django_project/first_app/templates/lessons_list.html
+++ b/django_project/first_app/templates/lessons_list.html
@@ -1,34 +1,45 @@
 {% extends "base.html" %}
+{% load static %}
 {% load app_tags %}
 {% block title %} Lessons {% endblock %}
 
 {% block content %}
-    <div id="page-wrapper" class="d-flex flex-row w-100">
-        <div id="lesson-detail-side" class="w-75">
-            <div class="container">
-                <h1>Active Lesson Details</h1>
+    <div id="page-wrapper" class="d-flex flex-row w-100 h-100">
+        <div id="lesson-detail-side" class="w-75 bg-dark">
+            <div class="container d-flex flex-column justify-content-center">
+                <h1 class="bg-light light-title">Active Lesson Details</h1>
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">{{ active_lesson.title }}</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">{{ active_lesson.date }}</h6>
+                        <div class="d-flex flex-row">
+                            <div>
+                                <h5 class="card-title">{{ active_lesson.title }}</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">{{ active_lesson.date }}</h6>
+                            </div>
+                            <div id="lesson-image">
+                                <img src="{% static 'images/img.png' %} " alt="Python Logo" class="w-25">
+                            </div>
+
+                        </div>
                         <p class="card-text">{{ active_lesson.description }}</p>
+
                     </div>
                 </div>
             </div>
-
         </div>
-        <div id="lessons-list-side" class="w-25">
+        <div id="lessons-list-side" class="w-25 h-50">
             <nav class="navbar bg-dark navbar-dark justify-content-center">
                 <ul class="navbar-nav">
                     {% for lesson in lessons %}
-                        {% if lesson == active_lesson  %}
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">{{ forloop.counter }}: {{ lesson.title }}</a>
-                        </li>
+                        {% if lesson == active_lesson %}
+                            <li class="nav-item">
+                                <a class="nav-link active"
+                                   href="{% url 'lessons-list' %}?active_lesson_id={{ lesson.title }}">{{ forloop.counter }}: {{ lesson.title }}</a>
+                            </li>
                         {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">{{ forloop.counter }}: {{ lesson.title }}</a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link"
+                                   href="{% url 'lessons-list' %}?active_lesson_id={{ lesson.title }}">{{ forloop.counter }}: {{ lesson.title }}</a>
+                            </li>
                         {% endif %}
                     {% endfor %}
 
